--- a/croppicutils/build.gradle
+++ b/croppicutils/build.gradle
@@ -23,5 +23,5 @@ android {
 
 dependencies {
     compile 'top.zibin:Luban:1.1.3'
-//    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
 }
