--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':croppicutils')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
